k8s_init/yaml/volvo_ema80/web/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ctc-ema80-web-volvo-svc
  namespace: ema80-ns
spec:
  type: NodePort
  ports:
  - port: 8080 
    targetPort: 8080
    nodePort: 32020 
  selector:
    statefulset.kubernetes.io/pod-name: "ctc-ema80-web-volvo-0"
